# Proyecto-C-C-Final

./: CMakeLists.txt  equipo.cpp  equipo.h  execprogram.ps1  gestorEquipos.cpp  gestorEquipos.h  main.cpp  propietario.cpp  propietario.h
informe/: Infome Proyecto.docx
